<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="#ffffff">

        <RelativeLayout
            android:id="@+id/sign_out_and_disconnect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="0dp">

            <ImageView
                android:id="@+id/zemoso_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/desc_zemoso_icon"
                android:src="@mipmap/ic_zemoso" />

            <TextView
                android:id="@+id/title_text_contactsList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_text_contactsList"
                android:layout_alignParentRight="true"
                android:layout_marginRight="130dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:textColor="@android:color/white"
                android:background="#F66D52"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_alignParentRight="true"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.55"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="#474747">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="contact number 1"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="contact number 2"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="contact number 3"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
